<resources>
    <string name="app_name">IWak</string>
    <string name="label_location">Bogor</string>
    <string name="label_hint">Search...</string>
    <string name="label_name">Nama</string>
    <string name="action_settings">Settings</string>
    <string name="user1">Akshay Ruparelia</string>
    <string name="investasi">Investasi</string>
    <string name="proyek1">Ikan Mas</string>
    <string name="location1">Bogor, Indonesia</string>
    <string name="profit">Keuntungan</string>
    <string name="contract">Kontrak Investasi</string>
    <string name="invester">Invester</string>
    <string name="profit_back">20% per tahun</string>
    <string name="contract_value">1 tahun</string>
    <string name="invester_value">238 orang</string>
    <string name="desc_title">Deskripsi</string>
    <string name="desc">Peternakan Ikan Mas di Bogor, Indonesia dapat dikembangkan dengan baik hingga saat ini. Jumlah yang sudah dikembangkan hingga saat ini adalah sekitar ribuan ekor ikan Mas, dan juga memiliki sekitar puluhan pelanggan tetap yang membeli ratusan ekor ikan Mas pada tiap bulannya. Kami juga memili puluhan unit dan belasan cabang di seluruh pulau Jawa.</string>
    <string name="progress">Perkembangan</string>
    <string name="detail">Detail</string>

    <string-array name="title">
        <item>Ikan Dori</item>
        <item>Udang</item>
        <item>Ikan Mas</item>
        <item>Ikan Teri</item>
        <item>Ikan Kembung</item>
        <item>Ikan Tuna</item>
        <item>Ikan Cakalang</item>
        <item>Ikan Salmon</item>
        <item>Ikan Lele</item>
        <item>Ikan Gurame</item>
    </string-array>

    <string-array name="address">
        <item>Bogor, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bandung, Indonesia</item>
        <item>Surabaya, Indonesia</item>
        <item>Malang, Indonesia</item>
        <item>Semarang, Indonesia</item>
        <item>Makassar, Indonesia</item>
        <item>Bandung, Indonesia</item>
        <item>Surabaya, Indonesia</item>
        <item>Malang, Indonesia</item>
    </string-array>

    <string-array name="desc">
        <item>Peternakan Ikan Dori di Bogor, Indonesia dapat dikembangkan dengan baik hingga saat ini. Jumlah yang sudah dikembangkan hingga saat ini adalah sekitar ribuan ekor ikan Dori, dan juga memiliki sekitar puluhan pelanggan tetap yang membeli ratusan ekor ikan Dori pada tiap bulannya. Kami juga memili puluhan unit dan belasan cabang di seluruh pulau Jawa.</item>
        <item>Peternakan Udang di Jakarta, Indonesia dapat dikembangkan dengan baik hingga saat ini. Jumlah yang sudah dikembangkan hingga saat ini adalah sekitar jutaan ekor Udang, dan juga memiliki sekitar puluhan pelanggan tetap yang membeli ratusan ekor Udang pada tiap bulannya. Kami juga memili puluhan unit dan belasan cabang di seluruh pulau Jawa.</item>
        <item>Peternakan Ikan Mas di Bandung, Indonesia dapat dikembangkan dengan baik hingga saat ini. Jumlah yang sudah dikembangkan hingga saat ini adalah sekitar ribuan ekor ikan Mas, dan juga memiliki sekitar puluhan pelanggan tetap yang membeli ratusan ekor ikan Mas pada tiap bulannya. Kami juga memili puluhan unit dan belasan cabang di seluruh pulau Jawa.</item>
        <item>Peternakan Ikan Teri di Surabaya, Indonesia dapat dikembangkan dengan baik hingga saat ini. Jumlah yang sudah dikembangkan hingga saat ini adalah sekitar ribuan ekor ikan Teri, dan juga memiliki sekitar puluhan pelanggan tetap yang membeli ratusan ekor ikan Teri pada tiap bulannya. Kami juga memili puluhan unit dan belasan cabang di seluruh pulau Jawa.</item>
        <item>Peternakan Ikan Kembung di Malang, Indonesia dapat dikembangkan dengan baik hingga saat ini. Jumlah yang sudah dikembangkan hingga saat ini adalah sekitar ribuan ekor ikan Kembung, dan juga memiliki sekitar puluhan pelanggan tetap yang membeli ratusan ekor ikan Kembung pada tiap bulannya. Kami juga memili puluhan unit dan belasan cabang di seluruh pulau Jawa.</item>
        <item>Peternakan Ikan Tuna di Semarang, Indonesia dapat dikembangkan dengan baik hingga saat ini. Jumlah yang sudah dikembangkan hingga saat ini adalah sekitar ribuan ekor ikan Tuna, dan juga memiliki sekitar puluhan pelanggan tetap yang membeli ratusan ekor ikan Tuna pada tiap bulannya. Kami juga memili puluhan unit dan belasan cabang di seluruh pulau Jawa.</item>
        <item>Peternakan Ikan Cakalang di Makassar, Indonesia dapat dikembangkan dengan baik hingga saat ini. Jumlah yang sudah dikembangkan hingga saat ini adalah sekitar ribuan ekor ikan Cakalang, dan juga memiliki sekitar puluhan pelanggan tetap yang membeli ratusan ekor ikan Cakalang pada tiap bulannya. Kami juga memili puluhan unit dan belasan cabang di seluruh pulau Jawa.</item>
        <item>Peternakan Ikan Salmon di Bandung, Indonesia dapat dikembangkan dengan baik hingga saat ini. Jumlah yang sudah dikembangkan hingga saat ini adalah sekitar ribuan ekor ikan Salmon, dan juga memiliki sekitar puluhan pelanggan tetap yang membeli ratusan ekor ikan Salmon pada tiap bulannya. Kami juga memili puluhan unit dan belasan cabang di seluruh pulau Jawa.</item>
        <item>Peternakan Ikan Lele di Surabaya, Indonesia dapat dikembangkan dengan baik hingga saat ini. Jumlah yang sudah dikembangkan hingga saat ini adalah sekitar ribuan ekor ikan Lele, dan juga memiliki sekitar puluhan pelanggan tetap yang membeli ratusan ekor ikan Lele pada tiap bulannya. Kami juga memili puluhan unit dan belasan cabang di seluruh pulau Jawa.a</item>
        <item>Peternakan Ikan Gurame di Malang, Indonesia dapat dikembangkan dengan baik hingga saat ini. Jumlah yang sudah dikembangkan hingga saat ini adalah sekitar ribuan ekor ikan Gurame, dan juga memiliki sekitar puluhan pelanggan tetap yang membeli ratusan ekor ikan Gurame pada tiap bulannya. Kami juga memili puluhan unit dan belasan cabang di seluruh pulau Jawa.</item>
    </string-array>

    <string-array name="image">
        <item>@drawable/dori</item>
        <item>@drawable/udang</item>
        <item>@drawable/mas</item>
        <item>@drawable/teri</item>
        <item>@drawable/kembung</item>
        <item>@drawable/tuna</item>
        <item>@drawable/cakalang</item>
        <item>@drawable/salmon</item>
        <item>@drawable/lele</item>
        <item>@drawable/gurame</item>
    </string-array>
</resources>
