<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailProyekActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_detail_proyek"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_175sdp"
                android:background="@drawable/image_1"/>
            <TextView
                android:id="@+id/tv_detail_proyek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proyek1"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_4sdp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:src="@drawable/location" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location1"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginLeft="@dimen/_4sdp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_bibit"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/bibit"
                    android:layout_marginRight="@dimen/_20sdp"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_modal"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/money"
                    android:layout_marginRight="@dimen/_20sdp"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_worker"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/worker"
                    android:layout_marginRight="@dimen/_20sdp"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_perlengkapan"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/fishing_net" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_21sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1.5">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profit"
                        android:textSize="16sp"
                        android:fontFamily="@font/montserrat_medium"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contract"
                        android:textSize="16sp"
                        android:fontFamily="@font/montserrat_medium"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/invester"
                        android:textSize="16sp"
                        android:fontFamily="@font/montserrat_medium"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profit_back"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/montserrat_semi_bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contract_value"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/montserrat_semi_bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/invester_value"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/montserrat_semi_bold"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_title"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/montserrat_semi_bold"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/progress"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_8sdp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/diagram"
                android:layout_margin="@dimen/_8sdp"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:layout_alignParentBottom="true"
        android:background="#81dde6">
        <Button
            android:id="@+id/btn_investasi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edit_button_investasi"
            android:text="@string/investasi"
            android:textColor="@android:color/white"
            android:layout_marginRight="@dimen/_5sdp"/>
        <ImageView
            android:id="@+id/iv_add_to_basket"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/shopping_basket"
            android:background="@drawable/edit_add_basket"/>
    </LinearLayout>
</RelativeLayout>